fixed alignment problems

--- a/style.css
+++ b/style.css
@@ -50,6 +50,14 @@ h4 {
 }
 
 .container {
-    width: 960px;
     margin: 0 auto;
+}
+
+iframe {
+    border-radius: 10px;
+    border: 3px solid black;
+    margin: 0 auto;
+    width: 955px;
+    text-align: center;
+    position: relative;
 }
